# zwmp

./: .dockerignore  .env.example  .gitignore  LICENSE  README-zh.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: pyproject.toml
apps/api/tests/: test_api.py  test_detail_expand.py  test_fixtures.py  test_v3_policy.py
apps/api/tests/fixtures/: direct_video.html  static_grid.html
apps/api/zwmp_api/: ai.py  app_config.py  config.py  fetcher.py  heuristics.py  jobs.py  main.py  schemas.py  storage.py  v3_adapter.py  v3_engine.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
config/: zwmp.config.json
deploy/: README.md  zwmp.env.example
deploy/docker/: api.Dockerfile  compose.env.example  nginx.conf  web.Dockerfile
deploy/nginx/: zwmp.conf
deploy/systemd/: zwmp-api.service
docs/: api.md  architecture.md  specification.md  web-media-rule-guide-zh.md  web-media-rule-guide.md  web-media-rule-spec.md
scripts/: dev.sh  export_rules.py
